Changed temporary page to splash page content, and added the first English homepage to the website.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
 </head>
 <body>
  <main>
-	 <article>
-		 <h1>A work in progress</h1>
-		 
-		 <p>The website is a work in progress and should be done very soon. Please check back frequently for updates!</p>	 
-	 </article>
+	 <h1>Arthur Kasparian</h1>
  </main>
 </body>
 </html>
