Added informative meta-data to each webpage of the website.

--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+	
 	<title>Arthur Kasparian | Homepage</title>
+	<meta name="description" content="General information about Arthur Kasparian, a back-end developer and computer science graduate.">
+	<meta name="author" content="Arthur Kasparian">
+	
+	<meta name="theme-color" content="Canvas">
+	
+	<meta name="robots" content="index,nofollow">
+	<meta name="googlebot" content="index,nofollow,notranslate">
 	
 	<link rel="stylesheet" href="/styles/typography.css">
 	<link rel="stylesheet" href="/styles/colors.css">
