--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+	
 	<title>Arthur Kasparian</title>
 	<meta name="description" content="Software developer and computer science graduate.">
 	
@@ -16,6 +18,7 @@
 	<link rel="stylesheet" href="styles/colors.css">
 	<link rel="stylesheet" href="styles/layout.css">
 	<link rel="stylesheet" href="styles/animation.css">
+	<meta name="author" content="Arthur Kasparian">
 	
 	<script>
 		const supportedLocales = ["en"]
