Added entrance link for noscript instances.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 <body>
  <main>
 	 <h1>Arthur Kasparian</h1>
+	 
+	 <noscript>
+		 <a href="/en/">Enter Website</a>
+	 </noscript>
  </main>
 </body>
 </html>
