Fixed page layout adding headers and footers, while placing elements in their appropriate positions.

--- a/en/index.html
+++ b/en/index.html
@@ -30,9 +30,15 @@
 	<script type="module" src="/components/contactInformation.js"></script>
 </head>
 <body>
+	<header>
+		<site-navigation></site-navigation>
+	</header>
+	
 	<main>
 		<article>
-			<h1>Arthur Kasparian</h1>
+			<header>
+				<h1>Arthur Kasparian</h1>
+			</header>
 			
 			<p>Back-end developer focused on systems, APIs, and data; comfortable working across multiple programming languages and technologies.</p>
 			
@@ -42,11 +48,12 @@
 			
 			<p>This website documents professional background and ongoing technical development. It is not a portfolio, personal, or freelance website. Project details, technical experience, and skills are provided on dedicated sections.</p>
 			
-			<p> Webpages here are available in multiple languages. Content accuracy is guaranteed only for those personally spoken: Armenian, Arabic, English, and French. Romanian proficiency is currently in progress.</p>
+			<p>Webpages here are available in multiple languages. Content accuracy is guaranteed only for those personally spoken: Armenian, Arabic, English, and French. Romanian proficiency is currently in progress.</p>
 		</article>
 	</main>
 
-	<site-navigation></site-navigation>
-	<contact-information></contact-information>
+	<footer>
+		<contact-information></contact-information>
+	</footer>
 </body>
 </html>
