Fixed software "engineer" by rewriting it to "developer".

--- a/en/index.html
+++ b/en/index.html
@@ -44,7 +44,7 @@
 			
 			<p>Academic and early professional experience in Java, JavaScript, and relational database systems, alongside exposure to a broader set of tools and technologies. Bachelor of Science in Computer Science.</p>
 			
-			<p>Based in Bucharest, Romania; authorised for local employment in Romania and remote roles within the EU. Open to junior and entry-level back-end software engineering positions.</p>
+			<p>Based in Bucharest, Romania; authorised for local employment in Romania and remote roles within the EU. Open to junior and entry-level back-end software development positions.</p>
 			
 			<p>This website documents professional background and ongoing technical development. It is not a portfolio, personal, or freelance website. Project details, technical experience, and skills are provided on dedicated sections.</p>
 			
