--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 	
 	<title>Arthur Kasparian | Homepage</title>
-	<meta name="description" content="General information about Arthur Kasparian, a back-end developer and computer science graduate.">
+	<meta name="description" content="The homepage of Arthur Kasparian's career website.">
 	<meta name="author" content="Arthur Kasparian">
 	
 	<meta name="theme-color" content="Canvas">
