Added language selector component and prefetch support.

--- a/en/index.html
+++ b/en/index.html
@@ -28,6 +28,9 @@
 	
 	<script type="module" src="/components/siteNavigation.js"></script>
 	<script type="module" src="/components/contactInformation.js"></script>
+	<script type="module" src="/components/languageSelector.js"></script>
+	
+	<link rel="prefetch" href="/ro/">
 </head>
 <body>
 	<header>
@@ -54,6 +57,7 @@
 
 	<footer>
 		<contact-information></contact-information>
+		<language-selector></language-selector>
 	</footer>
 </body>
 </html>
