Fixed "Arthur" by setting it to "Artur" in Romanian webpage.

--- a/ro/index.html
+++ b/ro/index.html
@@ -40,7 +40,7 @@
 <main>
 	<article>
 		<header>
-			<h1>Arthur Kasparian</h1>
+			<h1>Artur Kasparian</h1>
 		</header>
 		
 		<p>Dezvoltator back-end axat pe sisteme, API-uri și date; familiarizat cu lucrul în mai multe limbaje de programare și tehnologii.</p>
