Translated technical page into Romanian

--- a/ro/index.html
+++ b/ro/index.html
@@ -33,7 +33,7 @@
 <header>
 	<nav>
 		<a href="./" class="active">Acasă</a>
-		<!--<a href="./technical">Tehnic</a>-->
+		<a href="./technical">Tehnic</a>
 	</nav>
 </header>
 
