Fixed "Arthur" to "Artur" in the Romanian root page.

--- a/ro/index.html
+++ b/ro/index.html
@@ -12,7 +12,7 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 	
 	<title>Artur Kasparian | Acasă</title>
-	<meta name="description" content="Pagina principală a site-ului de carieră al lui Arthur Kasparian.">
+	<meta name="description" content="Pagina principală a site-ului de carieră al lui Artur Kasparian.">
 	<meta name="author" content="Artur Kasparian">
 	
 	<meta name="theme-color" content="Canvas">
