Disabled CORS in the root page as it seems to be unnecessary.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+<!--	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">-->
 	
 	<title>Arthur Kasparian</title>
 	<meta name="description" content="Software developer and computer science graduate.">
@@ -30,10 +30,11 @@
 			"@context": "https://schema.org",
 			"@type": "Person",
 			"name": "Arthur Kasparian",
-			"jobTitle": "Back-end Developer",
+			"jobTitle": "Software Developer",
 			"url": "https://career.arthur.kasparian.ro",
 			"sameAs": [
-				"https://www.linkedin.com/in/arthurkasparian"
+				"https://www.linkedin.com/in/arthurkasparian",
+				"https://github.com/arthurkasparian"
 			]
 		}
 	</script>
