Fixed broken relative links in the locale-root pages

--- a/ro/index.html
+++ b/ro/index.html
@@ -32,8 +32,8 @@
 <body>
 <header>
 	<nav>
-		<a href="./" class="active">Acasă</a>
-		<a href="./technical">Tehnic</a>
+		<a href="/ro/" class="active">Acasă</a>
+		<a href="/ro/technical">Tehnic</a>
 	</nav>
 </header>
 
