--- a/en/index.html
+++ b/en/index.html
@@ -32,8 +32,8 @@
 <body>
 	<header>
 		<nav>
-			<a href="./" class="active">Home</a>
-			<a href="./technical/">Technical</a>
+			<a href="/en/" class="active">Home</a>
+			<a href="/en/technical/">Technical</a>
 		</nav>
 	</header>
 	
